[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Fonts/LACONIC_BOLD.OTF" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/LACONIC_REGULAR.OTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/TipText.gd" type="Script" id=4]
[ext_resource path="res://Sprites/GameOver/GO_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/GameOver/fly0004.png" type="Texture" id=6]
[ext_resource path="res://Sprites/GameOver/fly0002.png" type="Texture" id=7]
[ext_resource path="res://Sprites/GameOver/fly0003.png" type="Texture" id=8]
[ext_resource path="res://Sprites/GameOver/fly0001.png" type="Texture" id=9]
[ext_resource path="res://Sprites/GameOver/GO_2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/GameOver/GO_3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/GameOver/GO_4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/GameOver/GO_5.png" type="Texture" id=13]
[ext_resource path="res://Sprites/GameOver/GO_6.png" type="Texture" id=14]
[ext_resource path="res://Sprites/GameOver/GO_6b_eyes.png" type="Texture" id=15]
[ext_resource path="res://Sounds/flySwarm.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sounds/typing.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sounds/typeDing.ogg" type="AudioStream" id=18]
[ext_resource path="res://Sprites/GameOver/GO_70001.png" type="Texture" id=19]
[ext_resource path="res://Sprites/GameOver/GO_70002.png" type="Texture" id=20]
[ext_resource path="res://Sprites/GameOver/GO_70003.png" type="Texture" id=21]
[ext_resource path="res://Sprites/GameOver/GO_8.png" type="Texture" id=22]
[ext_resource path="res://Sprites/GameOver/GO_9a.png" type="Texture" id=23]
[ext_resource path="res://Sprites/GameOver/GO_9b_cropped.png" type="Texture" id=24]
[ext_resource path="res://Sprites/GameOver/GO_10.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "bon",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "chic",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "convLev",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "fan",
"speed": 24.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "fb",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "fox",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "fred2",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "light",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "pistol",
"speed": 5.0
} ]

[sub_resource type="Animation" id=15]
resource_name = "Entry"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 960, 405 ), Vector2( 960, 675 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 675 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "FbEyeFlick"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.5, 1.9, 2.3, 2.7, 3.1, 3.8, 4.5, 5 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0.705882 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
resource_name = "LightFlicko"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.494382, 1 ), 0.0314644, 0.0314644, 0, 0, Vector2( 1, 0 ), 0.00331612, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 800, 150, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.5
orbit_velocity = 0.15
orbit_velocity_random = 1.0
linear_accel = 2.0
tangential_accel = 5.0
angle = -10.0
angle_random = 1.0
scale_random = 0.2
scale_curve = SubResource( 9 )

[sub_resource type="AnimatedTexture" id=11]
flags = 4
frames = 4
fps = 20.0
frame_0/texture = ExtResource( 9 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=14]
size = 96
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 9
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=12]
resource_name = "Entry"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( -550, 40 ), Vector2( 60, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "StartOverFlick"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "Flicker"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( -2, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 60, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
resource_name = "Enter"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 1880.0, 1560.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "TextEnterFinished"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1560.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="BackgroundSprite" type="AnimatedSprite" parent="."]
position = Vector2( 960, 675 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundSprite"]
autoplay = "Entry"
anims/Entry = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="FbEyes" type="Sprite" parent="BackgroundSprite"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 246, -347 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundSprite/FbEyes"]
anims/FbEyeFlick = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="LightOvr" type="Sprite" parent="BackgroundSprite"]
visible = false
position = Vector2( 138, -89 )
texture = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundSprite/LightOvr"]
anims/LightFlicko = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="FlyParticles2D" type="Particles2D" parent="."]
position = Vector2( 1100, 600 )
emitting = false
amount = 22
lifetime = 5.0
process_material = SubResource( 10 )
texture = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FlyParticles2D"]
stream = ExtResource( 16 )
volume_db = -8.0
autoplay = true

[node name="OverLabel" type="Label" parent="."]
margin_left = 60.0
margin_top = 40.0
margin_right = 611.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.54902, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 14 )
text = "GAME OVER"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="OverLabel"]
autoplay = "Entry"
anims/Entry = SubResource( 12 )
anims/Flicker = SubResource( 17 )
anims/RESET = SubResource( 13 )

[node name="TipText" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 60.0
margin_top = 1004.0
margin_right = 1980.0
margin_bottom = 1040.0
rect_min_size = Vector2( 1920, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "BBText"
text = "BBText"
script = ExtResource( 4 )

[node name="TipLabel" type="Label" parent="TipText"]
margin_right = 1920.0
margin_bottom = 36.0
rect_min_size = Vector2( 1920, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "It's amazing that Freddy can live without his head, you know?"
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TipText"]
stream = ExtResource( 17 )
volume_db = -4.0
pitch_scale = 1.05

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="TipText"]
stream = ExtResource( 18 )
volume_db = -2.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1560.0
margin_top = 759.0
margin_right = 1860.0
margin_bottom = 1067.0

[node name="RetryButton" type="Button" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
text = "Resume"

[node name="ResumeLabel" type="Label" parent="VBoxContainer/RetryButton"]
margin_right = 300.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "Retry"
align = 2
valign = 1

[node name="ChallengeButton" type="Button" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 104.0
margin_right = 300.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
text = "Resume"

[node name="ResumeLabel" type="Label" parent="VBoxContainer/ChallengeButton"]
margin_right = 300.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "Challenges"
align = 2
valign = 1

[node name="MenuButton" type="Button" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 208.0
margin_right = 300.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
text = "Resume"

[node name="ResumeLabel" type="Label" parent="VBoxContainer/MenuButton"]
margin_right = 300.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
align = 2
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
autoplay = "Enter"
anims/Enter = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="ResumeLabel2" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 729.0
margin_top = 965.0
margin_right = 1191.0
margin_bottom = 1065.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "Retry    Main Menu"
align = 1
valign = 1

[connection signal="mouse_entered" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ChallengeButton" to="." method="_on_ChallengeButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ChallengeButton" to="." method="_on_ChallengeButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/ChallengeButton" to="." method="_on_ChallengeButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
